# qontinui-setup-mcp

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
src/qontinui_setup_mcp/: __init__.py  __main__.py  cli.py  client.py  server.py
src/qontinui_setup_mcp/configuration/: __init__.py  ai_provider.py  log_sources.py  profiles.py
src/qontinui_setup_mcp/discovery/: __init__.py  frameworks.py  log_finder.py  scanner.py
src/qontinui_setup_mcp/guidance/: __init__.py  logging_advice.py
src/qontinui_setup_mcp/validation/: __init__.py  connection.py  log_validator.py  prerequisites.py
